# autocode

./: LICENSE  README.md  autocode_gui.ipynb  pyproject.toml  requirements.txt
src/autocode/: __init__.py  __main__.py  generator.py  gui.py
